Added sorting feature of the gameobjects. rendering is now done per layer.

--- a/sdl_game.project
+++ b/sdl_game.project
@@ -95,6 +95,10 @@
             <File Name="ResourcePhysicsComponent.h"/>
           </VirtualDirectory>
         </VirtualDirectory>
+        <VirtualDirectory Name="generator">
+          <File Name="Generator.h"/>
+          <File Name="Generator.cpp"/>
+        </VirtualDirectory>
       </VirtualDirectory>
       <VirtualDirectory Name="container">
         <File Name="Container.h"/>
